--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "firebase-admin": "^7.1.1",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
@@ -22,10 +23,9 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch --verbose --runInBand",
     "start": "node index.js",
-    "server": "nodemon",
-    "test": "jest --watch --verbose --runInBand"
+    "server": "nodemon index.js"
   },
   "jest": {
     "testEnvironment": "node"
