--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "faker": "^4.1.0",
     "firebase-admin": "^7.1.1",
     "helmet": "^3.16.0",
+    "heroku": "^7.22.7",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
