Updated dependencies and initiated passport setup using google strategy

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET=secret
 DB_ENV=development
+CLIENT_ID="923724344364-1nufg955pfp5femtscn98h20mfush6cu.apps.googleusercontent.com"
+CLIENT_SECRET="iu3Ykr-cHm2TFqYmdtYInXiG"
