--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.9.0",
     "sqlite3": "^4.0.6"
   },
