--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 JWT_SECRET=secret
 DB_ENV=development
-CLIENT_ID="923724344364-1nufg955pfp5femtscn98h20mfush6cu.apps.googleusercontent.com"
-CLIENT_SECRET="iu3Ykr-cHm2TFqYmdtYInXiG"
+CLIENT_ID=923724344364-1nufg955pfp5femtscn98h20mfush6cu.apps.googleusercontent.com
+CLIENT_SECRET=iu3Ykr-cHm2TFqYmdtYInXiG
+GOOGLE_REDIRECT_URL=http://localhost:3000/dashboard
