created an endpoint to verify token provided by google, check for user, and save new user into db

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ JWT_SECRET=secret
 DB_ENV=development
 CLIENT_ID=923724344364-1nufg955pfp5femtscn98h20mfush6cu.apps.googleusercontent.com
 CLIENT_SECRET=iu3Ykr-cHm2TFqYmdtYInXiG
-GOOGLE_REDIRECT_URL=http://localhost:3000/dashboard
+GOOGLE_REDIRECT_URL=http://localhost:3000/auth/google
+IOS_CLIENT_ID=923724344364-hani6pf71d8u9msnnbkab3egh5j9n8gm.apps.googleusercontent.com
