--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "firebase-admin": "^7.1.1",
+    "google-auth-library": "^3.1.2",
     "helmet": "^3.16.0",
     "heroku": "^7.22.7",
     "joi": "^14.3.1",
