Init Stripe integration

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET=secret
 DB_ENV=development
+PUBLISHABLE_KEY=pk_test_IuV3H4bcKKItAUmS8Mxxb2yl00E18jGeXN
+SECRET_KEY=sk_test_SuUn5qaTcIrka8N3LJsKckHt000znjyrpM
