--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "pg": "^7.9.0",
-    "sqlite3": "^4.0.6"
+    "pug": "^2.0.3",
+    "sqlite3": "^4.0.6",
+    "stripe": "^6.28.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
