--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "heroku": "^7.22.7",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
+    "moment": "^2.24.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^7.9.0",
